<resources>
    <string name="app_name">Apartments</string>
    <string name="todo">TODO</string>
    <string name="aceptar">Aceptar</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_cuenta_reg_strate_aqu">¿No tienes cuenta? Regístrate aquí</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="introducircorreoelectronicoyocontrasena">Introduce el correo electrónico y/o contraseña</string>
    <string name="elcorreoelectronicoyocontrasenasonincorrectos">El correo electrónico y/o contraseña son incorrectos</string>
    <string name="registrar">Registrar</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrar_cuenta">Registrar cuenta</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="noselogrorealizarelregistrointentedenuevo">No se logró realizar el registro. Intente de nuevo</string>
    <string name="verificatuemailparapoderingresar">Verifica tu email para poder ingresar</string>
    <string name="ingresa_tu_correo_electr_nico">Ingresa tu correo electrónico</string>
    <string name="restablecer_contrase_a">Restablecer contraseña</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>

</resources>